[tool.poetry]
name = "tap_brightview"
version = "1.1.2"
description = ""
authors = ["Jordan <jordan.wallace.williams@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
singer-python = "^5.9.1"
JPype1 = "^1.2.0"
JayDeBeApi = "^1.2.3"
python-dotenv = "^0.15.0"
schema-builder = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.3.1"
vcrpy = "^4.1.1"
pytest-cov = "^2.10.1"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
black = "^20.8b1"

[tool.poetry.scripts]
tap-brightview = 'tap_brightview:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
